# nodle

./: .gitignore  CLEANUP_TODO.md  Cargo.toml  Cargo.toml.test  DEVELOPER_GUIDE.md  GETTING_STARTED.md  LICENSE  PLUGINS.md  README.md  STRATEGY.md  TODO_ATTRIBUTES.md  TODO_ATTRIBUTES_DETAILED.md  TODO_NODEFACTORY.md  USD_STRATEGY.md  VIEWPORT_OPTIMIZATION.md  WGPU_STRATEGY.md  activate_usd.bat  activate_usd.sh  install.bat  install.sh  migrate_usd_to_plugin.sh  test_connections.rs  test_plugins.rs  update_nodes.sh  verify_separation.sh
.cargo/: config.toml
Kitchen_set/: check_renderers.sh  render_kitchen_cycles.sh  render_kitchen_storm.sh  view_kitchen.sh
docs/: ConnectionArchitectureAnalysis.md  DeveloperGuide.md  NodeGraphEngine.md  PLUGINS.md
examples/: basic_graph.rs
nodle-app/: Cargo.toml
nodle-app/src/: context.rs  gpu_renderer.rs  main.rs  nodes.rs
nodle-app/src/contexts/: base.rs  materialx.rs  mod.rs  registry.rs
nodle-app/src/contexts/materialx/: mod.rs
nodle-app/src/contexts/materialx/nodes/: mix.rs  mod.rs  noise.rs  standard_surface.rs  texture.rs
nodle-app/src/contexts/materialx/nodes/output/: mod.rs  view_2d.rs  view_3d.rs
nodle-app/src/data/: constant.rs  mod.rs  variable.rs
nodle-app/src/editor/: input.rs  interaction.rs  menus.rs  mod.rs  rendering.rs  viewport.rs
nodle-app/src/gpu/: callback.rs  instance.rs  mod.rs  renderer.rs
nodle-app/src/gpu/shaders/: port.wgsl
nodle-app/src/logic/: and.rs  not.rs  or.rs
nodle-app/src/math/: add.rs  divide.rs  mod.rs  multiply.rs  subtract.rs
nodle-app/src/nodes/: factory.rs  graph.rs  math_utils.rs  mod.rs  node.rs  registry_test.rs
nodle-app/src/nodes/data/: constant.rs  constant_enhanced.rs  variable.rs
nodle-app/src/nodes/logic/: and.rs  mod.rs  not.rs  or.rs
nodle-app/src/nodes/math/: add.rs  add_enhanced.rs  divide.rs  divide_enhanced.rs  multiply.rs  multiply_enhanced.rs  subtract.rs
nodle-app/src/nodes/output/: debug.rs  mod.rs  print.rs
nodle-app/src/output/: debug.rs  print.rs
nodle-app/src/shaders/: node.wgsl  port.wgsl
nodle-core/: Cargo.toml
nodle-core/src/: graph.rs  lib.rs  math.rs  node.rs  port.rs
plugins/: libnodle_usd_plugin.dylib
scripts/: setup_usd.py
src/: constants.rs  context.rs  lib.rs  main.rs  menu_hierarchy.rs  menu_hierarchy_usd.rs  plugin_interface.rs  startup_checks.rs  theme.rs  workspace.rs
src/contexts/: context_3d.rs  mod.rs  registry.rs  test_phase4.rs
src/contexts/subcontexts/: materialx.rs
src/editor/: canvas.rs  canvas_rendering.rs  debug_tools.rs  file_manager.rs  input.rs  interaction.rs  menus.rs  mod.rs  navigation.rs  panels.rs  rendering.rs  view_manager.rs  viewport.rs  workspace_builder.rs
src/editor/panels/: mod.rs  parameter.rs  parameter.rs.backup  spreadsheet.rs  tree.rs  viewport.rs
src/gpu/: callback.rs  canvas_callback.rs  canvas_instance.rs  canvas_rendering.rs  config.rs  instance.rs  mod.rs  renderer.rs  renderer3d.rs  usd_renderer.rs  viewport_3d_callback.rs  viewport_3d_rendering.rs  viewport_callback.rs
src/gpu/shaders/: axis_gizmo.wgsl  button.wgsl  flag.wgsl  grid3d.wgsl  mesh3d.wgsl  node.wgsl  wireframe3d.wgsl
src/nodes/: cache.rs  defaults.rs  execution_engine.rs  factory.rs  graph.rs  hooks.rs  interface.rs  mod.rs  node.rs  ownership.rs  port.rs
src/nodes/3d/: geometry.rs  output.rs  transform.rs
src/nodes/data/: constant.rs  constant_enhanced.rs  mod.rs  variable.rs  variable_enhanced.rs
src/nodes/data/constant/: constant.rs  functions.rs  logic.rs  mod.rs  parameters.rs
src/nodes/logic/: and.rs  and_enhanced.rs  mod.rs  not.rs  not_enhanced.rs  or.rs  or_enhanced.rs
src/nodes/materialx/: math.rs  mod.rs  shading.rs  textures.rs  utilities.rs
src/nodes/math/: add.rs  add_enhanced.rs  divide.rs  divide_enhanced.rs  mod.rs  multiply.rs  multiply_enhanced.rs  subtract.rs  subtract_enhanced.rs
src/nodes/output/: debug.rs  debug_enhanced.rs  mod.rs  print.rs  print_enhanced.rs
src/nodes/three_d/: lighting.rs  mod.rs
src/nodes/utility/: mod.rs
src/plugins/: mod.rs
src/viewport/: mod.rs  types.rs
src/workspaces/: base.rs  materialx.rs  mod.rs  registry.rs  test_phase4.rs  workspace_2d.rs  workspace_3d.rs
src/workspaces/three_d/: mod.rs
(+159 files in other folders)
