[package]
name = "nodle"
version = "0.1.0"
edition = "2021"
authors = ["Brian Sundman <bsundman@gmail.com>"]
license = "MIT"
description = "Node-based visual programming editor"
repository = "https://github.com/bsundman/nodle"

[[bin]]
name = "nodle"
path = "src/main.rs"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["wgpu"] }
egui-wgpu = "0.29"
wgpu = "22"
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
chrono = { version = "0.4", features = ["serde"] }
# USD integration using Python bindings via PyO3
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }

[features]
default = []
usd = ["pyo3"]