[package]
name = "nodle"
version = "0.1.0"
edition = "2021"
authors = ["Brian Sundman <bsundman@gmail.com>"]
license = "MIT"
description = "Node-based visual programming editor"
repository = "https://github.com/bsundman/nodle"

[[bin]]
name = "nodle"
path = "src/main.rs"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["wgpu"] }
egui-wgpu = "0.29"
wgpu = "22"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }
libloading = "0.8"
nodle-plugin-sdk = { path = "../nodle-plugin-sdk" }
dirs = "5.0"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
# USD functionality now provided by separate USD plugin

[features]
default = []