[package]
name = "nodle"
version = "0.1.0"
edition = "2021"
authors = ["Brian Sundman <bsundman@gmail.com>"]
license = "MIT"
description = "Node-based visual programming editor"
repository = "https://github.com/bsundman/nodle"

[[bin]]
name = "nodle"
path = "src/main.rs"

[dependencies]
egui = { workspace = true }
eframe = { workspace = true, features = ["wgpu"] }
egui-wgpu = "0.29"
wgpu = "22"
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.19"